force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Account__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional Lookup to Salesforce Account to allow related list under Accounts</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>