force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount_Received__c</fullName>
    <description>TotalAmt of Payment</description>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>