force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Amount_Unapplied__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount_Unapplied__c</fullName>
    <description>UnappliedAmt or Amount Credited</description>
    <label>Amount Unapplied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>