force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>