force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Customer__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Customer__c</fullName>
    <description>Relates to Breadwinner Account Connection object</description>
    <label>Customer</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>