force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>