force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Id__c</fullName>
    <description>Id field of the Payment 
Format: [CompanyID]-[PaymentID]</description>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>