force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Method__c</fullName>
    <description>Payment Method Name</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>