force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Payment_Method_Ref__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Method_Ref__c</fullName>
    <description>Payment Method Reference number</description>
    <label>Payment Method Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>