force-app/main/default/objects/breadwinner_qbo__Payment__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Customer__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Payment_Date__c</columns>
    <columns>breadwinner_qbo__Amount_Received__c</columns>
    <columns>breadwinner_qbo__Amount_Unapplied__c</columns>
    <columns>breadwinner_qbo__Reference_Number__c</columns>
    <columns>breadwinner_qbo__Payment_Method__c</columns>
    <columns>breadwinner_qbo__Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>