force-app/main/default/objects/breadwinner_qbo__Payment__c/listViews/breadwinner_qbo__Unapplied_Payments.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Unapplied_Payments</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Customer__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Payment_Date__c</columns>
    <columns>breadwinner_qbo__Amount_Received__c</columns>
    <columns>breadwinner_qbo__Amount_Unapplied__c</columns>
    <columns>breadwinner_qbo__Reference_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Amount_Unapplied__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Unapplied Payments</label>
</ListView>